# kdx

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.cursor/rules/: kdx-publish.mdc
deploy/: rbac.yaml
docs/: help.md
examples/: diagnosis_context.sample.json  llm_input_format.md
kdx/: cli.py  config.py
kdx/collector/: k8s.py  mock.py  types.py
kdx/diagnosis/: engine.py  prompts.py  providers.py
kdx/output/: formatter.py
scenarios/crash_loop/: deployment.yaml
scenarios/image_pull_backoff/: deployment.yaml
scenarios/oom_kill/: deployment.yaml
scenarios/pending_unschedulable/: deployment.yaml
scripts/: apply_scenario.sh  check_boundaries.py  reset_scenario.sh
tests/: conftest.py  test_cli.py  test_collector.py  test_engine.py  test_formatter.py  test_prompts.py  test_providers.py
tests/fixtures/: crash_loop.json  image_pull_backoff.json  oom_kill.json  pending_unschedulable.json
